@@ -38,7 +38,11 @@ prettyDate <- function(x, n = 5, min.n = n %/% 2, sep = " ", ...)
 	attr(x, "tzone") <- "GMT"
     zz <- range(x, na.rm = TRUE)
     D <- diff(nzz <- as.numeric(zz))
-    if(D < 1) { # unique values / sub-second ranges: [? or use "1 ms" steps below?]
+    if(isDate && D <= n * 24*3600) { # D <= 'n days'
+	zz <- as.Date(zz)
+	return( seq.Date(zz[1], zz[2], by = "1 day") )
+    }
+    else if(D < 1) { # unique values / sub-second ranges: [? or use "1 ms" steps below?]
 	m <- min(30, max(D == 0, n/2 - 1)) # "- 1" ==> better match for 'n'
 	zz <- structure(c(floor(nzz[1] - m), ceiling(nzz[2] + m)),
 			class = class(x), tzone = attr(x, "tzone"))
@@ -95,24 +99,20 @@ prettyDate <- function(x, n = 5, min.n = n %/% 2, sep = " ", ...)
         steps[[i]]$spec <- names(steps)[i]
     }
     ## crudely work out number of steps in the given interval
-    nsteps <- sapply(steps, function(s) {
-        xspan / s[[1]]
-    })
+    nsteps <- xspan / vapply(steps, `[[`, numeric(1), 1L)
     init.i <- which.min(abs(nsteps - n))
     ## calculate actual number of ticks in the given interval
     calcSteps <- function(s) {
         startTime <- trunc_POSIXt(min(zz), units = s$start) ## FIXME: should be trunc() eventually
-        if (identical(s$spec, "halfmonth")) {
-            at <- seq(startTime, max(zz), by = "months")
-            at2 <- as.POSIXlt(at)
-            at2$mday <- 15L
-            at <- structure(sort(c(as.POSIXct(at), as.POSIXct(at2))),
-                            tzone = attr(at, "tzone"))
-        } else {
-            at <- seq(startTime, max(zz), by = s$spec)
-        }
-        at <- at[min(zz) <= at & at <= max(zz)]
-        at
+	at <- if (identical(s$spec, "halfmonth")) {
+		  at <- seq(startTime, max(zz), by = "months")
+		  at2 <- as.POSIXlt(at)
+		  at2$mday <- 15L
+		  structure(sort(c(as.POSIXct(at), as.POSIXct(at2))),
+			    tzone = attr(at, "tzone"))
+	      } else
+		  seq(startTime, max(zz), by = s$spec)
+	at[min(zz) <= at & at <= max(zz)]
     }
     init.at <- calcSteps(steps[[init.i]])
     ## bump it up if below acceptable threshold
@@ -122,21 +122,16 @@ prettyDate <- function(x, n = 5, min.n = n %/% 2, sep = " ", ...)
         init.at <- calcSteps(steps[[init.i]])
     }
     makeOutput <- function(at, s) {
-        structure(if (isDate) as.Date(round(at, units = "days"))
-                  else as.POSIXct(at),
-                  labels = format(at, s$format))
+	structure(if (isDate) as.Date(round(at, units = "days"))
+		  else as.POSIXct(at),
+		  labels = format(at, s$format))
     }
     if (init.n == n) ## perfect
         return(makeOutput(init.at, steps[[init.i]]))
-    if (init.n > n) {
-        ## too many ticks
-        new.i <- init.i + 1L
-        new.i <- min(new.i, length(steps))
-    } else {
-        ## too few ticks
-        new.i <- init.i - 1L
-        new.i <- max(new.i, 1L)
-    }
+    new.i <- if (init.n > n) ## too many ticks
+		 min(init.i + 1L, length(steps))
+	     else ## too few ticks
+		 max(init.i - 1L, 1L)
     new.at <- calcSteps(steps[[new.i]])
     new.n <- length(new.at) - 1L
     ## work out whether new.at or init.at is better
